		customization of the update menu.	
	Modified LocationLog not to dump out its log unless BOTH assertions and the
		parameter 'LocationLog' are turned on, that is running like
		java -enableassertions -DLocationLog ...
	Changed the rule for multiple threads synchronizing on the random number generator.
		Previously the rule was that the threads should first synchronize on the
		schedule (state.schedule) prior to using the random number generator in
		parallel.  That turns out to cause deadlocks because when running under the
		GUI the Console holds onto the lock at the top level.  Instead the rule is
		that threads should lock on the random number generator directly.  This
		also affects RandomSequence, which is now locking on the generator rather
		than on the schedule when "shouldSynchronize" is true.  We have updated
		RandomSequence's code, plus documentation in RandomSequence,
		ParallelSequence, and the manual.  NOTE that this does NOT affect the rule
		that GUI objects should lock on state.schedule in order to synchronize
		with the underlying model thread.  That's a different issue.  Thanks to
		Mark Coletti <mcoletti@gmu.edu>
	Modifications to Console, SimpleController, and SimState which force the internal 
		seed to be 32 bits.  MersenneTwisterFast only uses 32 bits of its seed, 
		but we were allowing the user to specify and display 64 bits.  This was 
		confusing because the user would see 64-bit numbers in the Console but if 
		he tried to *set* those same values in the Console he'd get a message 
		indicating that the seed would be truncated.  This was also error-prone 
		because users would see a different seed (64 bits) than was actually being 
		used (truncated 32 bits).	
	HistogramGenerator and ScatterPlotGenerator were incorrectly changing update()
		from protected to public.  It's supposed to be protected and not called
		directly.  Instead, call update(..,...).